--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body id="top">
 	<header class="header col-2">
 		<div>
-			<h1>verðbólga</h1>
+			<h1>verðbólga ddddddddddddddddd</h1>
 		</div>
 		<div>
 			<h4 class="verkefni">Verkefni 7.1</h4>
